<resources>
    <string name="app_name">密码生成器</string>
    <string name="include_numbers">包含数字</string>
    <string name="generate_password">生成密码</string>
    <string name="include_capital">包含大写字母</string>
    <string name="include_lowercase">包含小写字母</string>
    <string name="include_special_characters">包含特殊字符</string>
    <string name="password_length">密码位数：</string>
    <string name="copy">复制</string>
    <string name="password_list">密码列表</string>
    <string name="add_to_password_list">添加到密码列表</string>
    <string name="numbers_only_warning">你只能在“密码位数”文本框中输入数字！</string>
    <string name="input_password_length_warning">请输入要生成的密码长度！</string>
    <string name="select_character_type_warning">请选择一种要包含的字符类型！</string>
    <string name="password_length_zero_warning">密码长度不能为0！</string>
    <string name="password_length_exceed_warning">密码的长度不能超过 %d！</string>
    <string name="password_copied_info">密码已经复制到剪贴板。</string>
    <string name="password_all_copied_info">全部密码已经复制到剪贴板。</string>
    <string name="password_and_name_copied_info">名称和密码已经复制到剪贴板。</string>
    <string name="password_not_generated_warning">请先生成密码！</string>
    <string name="input_password_name_tip">输入密码名称</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="input_password_name_warning">请输入密码名称！</string>
    <string name="password_added_tip">密码 %s 已经添加到密码列表。</string>
    <string name="delete">删除</string>
    <string name="edit">编辑</string>
    <string name="copy_to_clipboard">复制密码到剪贴板</string>
    <string name="copy_name_and_value_to_clipboard">复制名称和密码到剪贴板</string>
    <string name="copy_all_to_clipboard">复制全部到剪贴板</string>
    <string name="delete_password_inquiry">确实要删除选中密码吗？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="delete_all_password">删除所有密码</string>
    <string name="delete_all_password_warning">确实要删除所有密码？删除后将无法恢复！</string>
</resources>
