<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/activity_vertical_margin"
    tools:context="com.zhongyang219.randompasswordgenerator.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <CheckBox
            android:text="@string/include_numbers"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/touch_target_height"
            android:id="@+id/check_number"
            />
        <CheckBox
            android:text="@string/include_capital"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/touch_target_height"
            android:id="@+id/check_captal"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/touch_target_height"
        android:orientation="horizontal">
        <CheckBox
            android:text="@string/include_lowercase"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/touch_target_height"
            android:id="@+id/check_lowercase"
            />

        <CheckBox
            android:text="@string/include_special_characters"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/touch_target_height"
            android:id="@+id/check_specal_char"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/touch_target_height"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >
        <TextView
            android:text="@string/password_length"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            />
        <EditText
            android:id="@+id/edit_length"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/touch_target_height"
            android:ems="10"
            android:inputType="number"
            android:textSize="14sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button_generate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:text="@string/generate_password"
        android:layout_marginTop="20dp"
        />

    <EditText
        android:id="@+id/editResult"
        android:layout_width="300dp"
        android:layout_height="@dimen/touch_target_height"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:onClick="onClick" />

    <Button
        android:text="@string/copy"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/copy"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/addToListBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="onClick"
        android:layout_gravity="center_horizontal"
        android:text="@string/add_to_password_list" />

    <Button
        android:id="@+id/passwordListBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:onClick="onClick"
        android:text="@string/password_list" />

</LinearLayout>
